ceci est mon commentaires1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Contactez nous</h2>
 
     <form action="exportToExcel.php" method="post">
-        <button type="submit">Exporter les données en Excel</button>
+        <button type="submit">test les données en Excel</button>
     </form>
     
 
