--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <label for="gender">Genre</label>
         <select id="gender" name="gender" required>
             <option value="">Selectionner votre Genre</option>
-            <option value="femme">Femme</option>
+            <option value="femme">tkt</option>
             <option value="homme">Homme</option>
-            <option value="autre">Autre</option>
+            <option value="autre">Furry</option>
         </select>
 
         <label for="voice">Voie souhaitée </label>
