--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-    <h2>Contactez nous</h2>
+    <h2>Contacter moi</h2>
 
     <form action="exportToExcel.php" method="post">
         <button type="submit">pas excel</button>
